<resources>
    <string name="app_name">Tigwal</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_exit">Are you sure you want to exit?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">Sign Up</string>
    <string name="terms_and_condition">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="home">Home</string>
    <string name="email">Email*</string>
    <string name="please_enter_mobile">Please enter mobile number.</string>
    <string name="save">SAVE</string>
    <string name="product_detail">Product Detail</string>
    <string name="payment_option">Payment Option</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="product_name">Product Name</string>
    <string name="onGoing">ON-GOING</string>
    <string name="onGoingOrderTitle">On-going Orders</string>
    <string name="pastOrder">PAST ORDERS</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price:</string>
    <string name="toatal_price">Total Price:</string>
    <string name="noInternetConnection">No internet connection</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email address.</string>
    <string name="please_enter_valid_email">Please enter valid email address.</string>
    <string name="quantity_title">Quantity :</string>
    <string name="facebook_app_id">1194597834664904</string>
    <string name="fb_login_protocol_scheme">fb1194597834664904</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="by">By</string>
    <string name="forgot_password_with_u">Forgot Password?</string>
    <string name="signin">Sign In</string>
    <string name="email_id">Email Id*</string>
    <string name="password_hint">Password*</string>
    <string name="or_login_with">Or Login With</string>
    <string name="mobile_number_with_star">Mobile Number*</string>
    <string name="con_password_hint">Re-enter Password*</string>
    <string name="iagree">I read and agree to</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="please_enter_password_not_match">Password and confirm password do not match.</string>
    <string name="please_agree_with_policy">Please check terms and conditions.</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="password_recovery_message">We will send password recovery code on this email address</string>
    <string name="send_link_recovery">Send Recovery Code</string>
    <string name="otp_is_required">Please enter 6 digits OTP.</string>
    <string name="otp_is_not_valid">Enter OTP not match.</string>
    <string name="new_password_is_required">Please enter new password.</string>
    <string name="old_password_is_required">Please enter old password.</string>
    <string name="confirm_password_is_required">Please enter confirm password.</string>
    <string name="new_and_confirm_password_miss_match">New Password and Confirm Password do not match.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">Submit</string>
    <string name="verify_otp_title">Enter Verification Code</string>
    <string name="verify_otp_message">We have Sent it on your Mobile Number\n </string>
    <string name="verify_otp_message_email">We have Sent it on your Email Address\n </string>
    <string name="dont_receive_code">Don\'t receive Code?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_message">At least 8 characters with uppercase,lowercase and Special character.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="update_password">Update Password</string>
    <string name="dummy_cms">What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley /n Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galle</string>
    <string name="data_not_found">No Data Found</string>
    <string name="search">Search</string>
    <string name="full_name">Name*</string>
    <string name="work_address">Address*</string>
    <string name="update">Update</string>
    <string name="help">Help</string>
    <string name="share_app">Share App</string>
    <string name="faq">FAQ’s</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="name_with_star">Name*</string>
    <string name="change_password">Change Password</string>
    <string name="support_chat">Support Chat</string>
    <string name="logout_small">Logout</string>
    <string name="order_id">Order Id:</string>
    <string name="sample_id">12345234</string>
    <string name="sample_price">$00</string>
    <string name="taxes">Taxes:</string>
    <string name="total_price">Total Price:</string>
    <string name="note">Note</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="check">Check</string>
    <string name="name_is_required">Please enter Name.</string>
    <string name="address_is_required">Please enter Address.</string>
    <string name="your_order_has_been_canceled">Your Order has been Canceled</string>
    <string name="jetski">Jetski</string>
    <string name="sample_date">27 March 2022</string>
    <string name="sightseeing_tour">Sightseeing Tour</string>
    <string name="one">1</string>
    <string name="sample_time">9:00 AM to 10:00 AM</string>
    <string name="per_person">Per Person</string>
    <string name="four">1</string>
    <string name="order_details">Order Details</string>
    <string name="total_items">Total Items:</string>
    <string name="are_you_sure_you_want_logout">Are you sure you want to logout?</string>
    <string name="app_version">App Version:</string>
    <string name="old_password">Old Password</string>
    <string name="minimum_eight_characters">Minimum 8 characters</string>
    <string name="upper_and_lowercase">One uppercase and lowercase characters</string>
    <string name="one_number">One number</string>
    <string name="special_characters">One special characters</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancel_order_u"><u>CANCEL ORDER</u></string>
    <string name="total_charges">Total Charges:</string>
    <string name="order_status">Order Status:</string>
    <string name="order_summary_u"><u>ORDER SUMMARY</u></string>
    <string name="order_summary">Order Summary</string>
    <string name="accepted">Accepted</string>
    <string name="write_reason_here">Write reason here…</string>
    <string name="reason">Reason*</string>
    <string name="location">Location</string>
    <string name="item_list">Items List</string>
    <string name="odrreceived">Order Received</string>
    <string name="odrredetails"><u>View Order Details</u></string>
    <string name="explore_man">Explore Oman</string>
    <string name="view_all"><u>View All</u></string>
    <string name="category_name">Category Name</string>
    <string name="fresh_recommendation">Recommendation</string>
    <string name="sub_category_name">Sub Category</string>
    <string name="are_you_sure_you_want_to_delete_cart">Are you sure you want to delete this item?</string>
    <string name="product_list">Product Listing</string>
    <string name="search_product_list">Search Product Listing</string>
    <string name="sendOrder">We will let you know when your order is accepted !</string>
    <string name="cards">Cards</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="no_of_items">No of Items:</string>
    <string name="discount">Discount:</string>
    <string name="pay_now">Pay Now</string>
    <string name="checkout">Checkout</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="related_product">Related Product</string>
    <string name="addtocart_success">Add to cart successfully.</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="write_notes_here">Write notes here..</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="permision_denied">Permission denied</string>
    <string name="some_error_ocurred">Some error occurred. Please try again!</string>
    <string name="please_enter_reason">Please enter reason for cancel order.</string>
    <string name="type_message">Type your message</string>
    <string name="verify">Verify</string>
    <string name="enter_recovery_code">Enter Recovery Code</string>
    <string name="please_enter_message">Please enter message.</string>
    <string name="notes">Notes:</string>
    <string name="service_provider_name">Service Provider Name</string>
    <string name="chat">Chat</string>
    <string name="login_failed">Login failed</string>
    <string name="GOOGLE_ANDROID_PLACE_API_KEY">AIzaSyD0Sfv-8A0JEUqptRDoLNICIeQ3lKjPMoc</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD0Sfv-8A0JEUqptRDoLNICIeQ3lKjPMoc</string>
    <string name="category">Category</string>
    <string name="facebook_client_token">fc9b9e933fb34f86b4cf2ac755ebb792</string>
    <string name="otp_send_successfully">Otp send successfully</string>
    <string name="quate_limit_sms">SMS quota exceeded</string>
    <string name="update_profile_success">Profile update successfully</string>
    <string name="available_time_slot">Available Time Slot :</string>
    <string name="password_message">*Please enter valid password combination\nat least one uppercase, one lowercase, one digit and minimum 8 characters length</string>
    <string name="booking_date">Booking Date :</string>
    <string name="service_provider_title">Vendor Name :</string>
    <string name="please_select_booking_date">Please select booking date</string>
    <string name="please_select_time_slot">Please select time slot</string>
    <string name="cart_empty">My Cart Is Empty</string>
    <string name="default_country_code">+968</string>
    <string name="please_enter_couponcode">Please enter coupon code</string>
    <string name="noIternetConnection">No Internet Connection</string>
    <string name="notification_empty">My Notification Is Empty</string>
    <string name="ongoing_order_empty">On-Going Order Is Empty</string>
    <string name="past_order_empty">Past Order Is Empty</string>
    <string name="success_order">Success Order</string>
    <string name="failed_success">Fail Order</string>
    <string name="available">Available</string>
    <string name="order_cancel_success">Order Cancelled</string>
    <string name="low_cost">Low cost</string>
    <string name="high_cost">High cost</string>
    <string name="add_location">Add Location</string>
    <string name="current_location">Current Location</string>
    <string name="search_location">Select Location</string>
    <string name="filter">Filter</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="choose_the_language">Choose the Language</string>
    <string name="done">Done</string>
</resources>