<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/dp_5"
    app:cardCornerRadius="@dimen/dp_7"
    android:layout_marginTop="@dimen/dp_10"
    android:background="@color/white"
    android:layout_marginStart="@dimen/dp_15"
    android:layout_marginEnd="@dimen/dp_15"
    android:layout_marginBottom="@dimen/dp_15">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_23"
        android:layout_marginEnd="@dimen/dp_10">
        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/dp_125"
            android:layout_height="@dimen/dp_125"
            app:cardElevation="@dimen/dp_5"
            app:cardCornerRadius="@dimen/dp_5">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_onGoingOrders"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_placeholder"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_18"
            android:layout_marginEnd="@dimen/dp_8">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_onGoingOrders_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jetski"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/black"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_onGoingOrders_tourName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sightseeing_tour"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/grey"
                android:layout_marginTop="@dimen/dp_1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_4">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp_14"
                    android:layout_height="@dimen/dp_14"
                    android:src="@drawable/ic_calendar"
                    android:tint="@color/grey"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_onGoingOrders_tourDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:text="@string/sample_date"
                    android:layout_marginStart="@dimen/dp_5"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/grey"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_4">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:text="@string/quantity"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_onGoingOrders_tourQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:text="@string/one"
                    android:layout_marginStart="@dimen/dp_3"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_4">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:text="@string/price"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/black"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_onGoingOrders_tourPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:text="@string/sample_price"
                    android:layout_marginStart="@dimen/dp_3"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>