<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corner_top"
    android:orientation="vertical"
    android:padding="@dimen/dp_15"
    android:paddingBottom="@dimen/dp_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llSelectCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:gravity="start"
                android:text="@string/add_location"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCurrentLocation"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/current_location"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_11" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSelectLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/search_location"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_11" />
    </LinearLayout>
</LinearLayout>