<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_25"
    android:layout_marginEnd="@dimen/dp_25"
    android:background="@drawable/border_dialoge_view"
    android:minHeight="@dimen/dp_200"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_15"
    android:paddingBottom="@dimen/dp_15">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold_midium_new"
        android:gravity="center"
        android:text="@string/choose_the_language"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewLanguage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_weight="1"
            android:background="@drawable/border_unfill_blue"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:paddingStart="@dimen/dp_20"
            android:paddingTop="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_8"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_12" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_fill_blue_theme"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:paddingStart="@dimen/dp_20"
            android:paddingTop="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_8"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>
</LinearLayout>