<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogFilter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:minWidth="@dimen/dp_150"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_65"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/border_white_text_box_bg"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_12"
        android:paddingTop="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_10">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textDirection="locale"
            android:textSize="@dimen/sp_12" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llLowCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLowCost"
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_13"
                android:src="@drawable/checkbox" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_7"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/low_cost"
                android:textColor="@color/black"
                android:textDirection="locale"
                android:textSize="@dimen/sp_12" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llHighCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivHighCost"
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_13"
                android:src="@drawable/checkbox" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_7"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/high_cost"
                android:textColor="@color/black"
                android:textDirection="locale"
                android:textSize="@dimen/sp_12" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/poppins_regular"
            android:layout_gravity="end"
            android:text="@string/reset_filter"
            android:id="@+id/txtResetFilter"
            android:textDirection="locale"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_marginEnd="@dimen/dp_15">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgClose"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:background="@drawable/border_button_blue_app"
            android:padding="@dimen/dp_8"
            android:src="@drawable/ic_close"
            android:tint="@color/white" />
    </RelativeLayout>
</RelativeLayout>